# fluent-codegen

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ARCHITECTURE.rst  CHANGELOG.rst  LICENSE  PLAN.md  README.md  README.rst  RELEASE.rst  pyproject.toml  pyrightconfig.json  release.sh  tox.ini
.github/workflows/: pythonpackage.yml  test.yml
analysis/: RESULTS.txt  analysis.py  count_ast_nodes.py
docs/: RELEASE.rst  advanced.rst  api.rst  changelog.rst  conf.py  e-objects.rst  escaping.rst  examples.rst  index.rst  installation.rst  static-typing.rst  usage.rst
docs/api/: compiler.rst
docs/examples/svg_to_turtle/: .gitignore  house.py  house_output.py  svg_to_turtle.py  test_svg_to_turtle.py
src/fluent_codegen/: __init__.py  ast_compat.py  codegen.py  remove_unused_assignments.py  utils.py
src/fluent_compiler/: ast_compat.py  bundle.py  codegen.py  compat.py  compiler.py  errors.py  escapers.py  resource.py  runtime.py  source.py  types.py  utils.py
tests/: test_aug_assign_design.py  test_codegen.py  test_compiler.py  test_fizzbuzz_example.py  test_remove_unused.py  test_utils.py
tests/format/: test_escapers.py
tools/benchmarks/: README.md  generate_ftl_file.py
