[project]
name = "fluent-codegen"
description = "A Python library for generating Python code via AST construction."
license = {text = "APL 2"}
authors = [
    { name = "Luke Plant", email = "luke@lukeplant.me.uk" }
]
requires-python = ">=3.12"
keywords = [
  "codegen",
  "code-generation",
  "ast",
  "python",
  "metaprogramming",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

dependencies = []

[project.urls]
Repository = "https://github.com/spookylukey/fluent-codegen"


[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "fluent_codegen.__version__"}

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501", "E731"]
extend-select = [
  "UP",
  "I",
  "FLY",
]

[tool.ruff.lint.isort]
known-first-party = ["fluent_codegen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ast-decompiler>=0.8",
    "hypothesis>=4.9.0",
    "pyright==1.1.406",
    "pytest>=7.4.4",
    "pytest-cov>=7.0.0",
    "ruff>=0.4.0",
]

