[project]
name = "fluent-codegen"
description = "A Python library for generating Python code via AST construction."
license = "Apache-2.0"
authors = [
    { name = "Luke Plant", email = "luke@lukeplant.me.uk" }
]
requires-python = ">=3.12"
keywords = [
  "codegen",
  "code-generation",
  "ast",
  "python",
  "metaprogramming",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
version = "0.3.0"
dependencies = [
    "typing_extensions>=4.10; python_version<'3.13'",
]

[project.urls]
Documentation = "https://fluent-codegen.readthedocs.io/en/latest/"
Repository = "https://github.com/spookylukey/fluent-codegen"


[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501", "E731"]
extend-select = [
  "UP",
  "I",
  "FLY",
]

[tool.ruff.lint.isort]
known-first-party = ["fluent_codegen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fluent_codegen --cov-fail-under=100"

[dependency-groups]
dev = [
    "hypothesis>=4.9.0",
    "pre-commit>=4.5.1",
    "pyright==1.1.406",
    "pytest>=7.4.4",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "tox>=4.36.0",
    "tox-uv>=1.29.0",
]

